# peertix-alfred-ai

./: .editorconfig  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  concert.md  core-values.yaml  flyte-project.yaml  pyproject.toml  skaffold.yaml  values.yaml
.github/workflows/: build-alfred-ai-image.yaml
peertix_alfred_ai/: env.py  main.py
peertix_alfred_ai/api/: .firebaserc
peertix_alfred_ai/api/functions/: bundled-openapi-def.yaml  index.js  package-lock.json  package.json
peertix_alfred_ai/api/functions/prompts/: p0_guidelines  p1_get_ticket_details  p2_ticket_examples
peertix_alfred_ai/api/functions/utils/: utils.js
peertix_alfred_ai/crews/: __init__.py
peertix_alfred_ai/crews/artist_research/: crew.py
peertix_alfred_ai/crews/artist_research/config/: agents.yaml  tasks.yaml
peertix_alfred_ai/crews/event_classifier/: crew.py
peertix_alfred_ai/crews/event_classifier/config/: agents.yaml  tasks.yaml
peertix_alfred_ai/crews/social_media_marketing/: crew.py
peertix_alfred_ai/crews/social_media_marketing/config/: agents.yaml  tasks.yaml
peertix_alfred_ai/crews/sport_research/: crew.py
peertix_alfred_ai/crews/topic_classifier/: crew.py
peertix_alfred_ai/lib/: secrets.py  utils.py
peertix_alfred_ai/prompts/: p1_get_ticket_details.jinja  p2_ticket_examples.jinja
peertix_alfred_ai/tasks/: firestore_write.py
peertix_alfred_ai/tools/: __init__.py  instagram_tool.py  spotify_tool.py
peertix_alfred_ai/workflows/: bundled-openapi-def.yaml  example_research.py  process_ticket.py
(+4 files in other folders)
